Fixed scaling and cutoff issue

--- a/letterboxd-receipts/style.css
+++ b/letterboxd-receipts/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 body {
@@ -15,12 +14,14 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow: hidden;
 }
 nav {
     font-size: 1rem; 
     position: fixed; 
-    top: 2rem; 
-    left: 2rem;
+    top: 3rem; 
+    left: 5rem;
+    scale: 1;
 }
 canvas {
     z-index: -1;
@@ -50,6 +51,7 @@ button {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    scale: 1;
 }
 header {
     font-size: 23px;
@@ -94,9 +96,9 @@ a {
     padding: 1rem;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+    margin-right: 0.5rem;
     align-items: center;
     color: rgba(0, 0, 0, 0.75);
-    /*border: 0.5rem solid black;*/
 }
 .text {
     padding-top: 5px;
@@ -157,14 +159,15 @@ a {
 /*Poster*/
 #posterFrame {
     display: none;
-    padding: 0.75rem;
+    padding: 0.85rem;
     background-color: black;
     align-items: center;
     justify-items: center;
+    margin-left: 0.5rem;
 }
 #poster {
     display: flex;
-    height: 21.5rem;
+    height: 21.35rem;
 }
 
 /*Options*/
@@ -175,7 +178,7 @@ a {
     justify-self: center;
 }
 .movieButton {
-    padding: 0.5rem;
+    padding: 0.75rem;
     background-color: black;
     border: none;
     display: flex;
@@ -203,4 +206,5 @@ a {
     background-color: green;
     border: 0.5rem solid black; 
     padding: 1rem;
+    scale: 0.75;
 }
